fix layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,8 @@ button:hover {
   background-color: #cfb4ef;
 }
 .tasks-field ul {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -231,6 +233,11 @@ button:hover {
   border-radius: 5px 0 0 5px;
   border: none;
 }
+
+.tasks-field .reduxLi {
+  display: block;
+}
+
 .taskField:disabled {
   color: #2b0e3b;
   background: transparent;
